--- a/XGBoost_v1.ipynb
+++ b/XGBoost_v1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4bbf1582-ea4c-416c-9082-0b326843c470",
    "metadata": {},
    "outputs": [
@@ -355,7 +355,8 @@
     "\n",
     "# (opsional) simpan model\n",
     "# from pathlib import Path\n",
-    "# best[\"model\"].get_booster().save_model(\"xgb_rowlevel_push74.json\")\n"
+    "# best[\"model\"].get_booster().save_model(\"xgb_rowlevel_push74.json\")\n",
+    "# testing"
    ]
   },
   {
